crates/anodized/tests/compile_fail/spec_inside_bare_trait.rs
#![no_main]

use anodized::spec;

trait T {
    #[spec]
    fn f(&self);
}
