crates/anodized/tests/compile_fail/spec_inside_bare_trait.stderr
error: The enclosing trait must have a `#[spec]` annotation.
 --> tests/compile_fail/spec_inside_bare_trait.rs:7:5
  |
7 |     fn f(&self);
  |     ^^^^^^^^^^^^
